Unit tests for DAO/model/utility level done